--- a/src/index.css
+++ b/src/index.css
@@ -266,7 +266,7 @@ p {
   transform: translate(-50%, -50%);
 }
 
-/* .show-modal-overlay {
+.show-modal-overlay {
   opacity: 1 !important;
   visibility: visible !important;
 }
@@ -281,7 +281,7 @@ p {
   transform: translateX(0%) !important;
   opacity: 1 !important;
   visibility: visible !important;
-} */
+}
 
 @media screen and (min-width: 992px) {
   .nav {
